@@ -151,6 +151,17 @@ var Util, DOM, CloudFunc, CloudCmd;
             };
         
         Util.ifExec(document.body.scrollIntoViewIfNeeded, lCallBack, lFunc);
+        
+        DOM.Events.add(['unload', 'beforeunload'], function (pEvent) {
+                var lRet, lIsBind = Key.isBind();
+                
+                if(!lIsBind) {
+                    DOM.preventDefault(pEvent);
+                    lRet = 'Please make sure that you saved all work.';
+                }
+                
+                return lRet;
+            });
     };
     
     function initModules(pCallBack){
